# CyberClock_V2

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  CyberClock.cpp  CyberClock.h  config.h  main.cpp  main.h  settings.h  webserver.cc  webserver.h  wifi_board.cc  wifi_board.h
main/audio_codecs/: audio_codec.cc  audio_codec.h  es8311_audio_codec.h
main/esp_idf/: .gitkeep
main/esp_idf/78__esp-wifi-connect/: wifi_configuration_ap.cc  wifi_station.cc
main/esp_idf/78__esp-wifi-connect/include/: wifi_configuration_ap.h  wifi_station.h
main/html/: adjust.h  adjust.html  factory.h  factory.html  index.h  index.html  settings.js  timer.h  timer.html  update.h  update.html
